package baseNoStates.milestone1;

import baseNoStates.milestone2.AreaVisitor;
import java.util.ArrayList;
import java.util.List;

import org.json.JSONObject;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;

/**
 * Area class applies the composite pattern. In this case, each Area might be
 * a Partition or a Space. Every Area has a door list and an identifier.
 */
public abstract class Area {

  private static final Logger logger = LoggerFactory.getLogger(Area.class);

  protected final String id;
  protected List<Door> doors;

  public Area(String id, List<Door> doors) {
    this.id = id;
    this.doors = doors;

    logger.debug("Area created with id={}", id);
  }

  public String getId() {
    return id;
  }

  public void setDoors(ArrayList<Door> doors) {
    this.doors = doors;
    logger.debug("Doors list replaced for area {}", id);
  }

  /**
   * Returns the list of doors giving access to this Area.
   * If the Area is 'building', all doors are returned.
   */
  public abstract List<Door> getDoorsGivingAccess();

  /**
   * Accepts a visitor that performs an operation on this Area instance.
   * This enables traversal-based behaviors to be externalized rather than
   * implemented directly inside the Area class.
   */
  abstract void accept(AreaVisitor visitor);

  public abstract JSONObject toJson(int depth);

  public abstract boolean isLocked();

  public abstract boolean isUnlocked();
}
