@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0

class Webserver {
- {static} PORT :int
- {static} FORMATTER : DateTimeFormatter
+ makeRequestChildren(tokens : String[]) : RequestChildren
+ Webserver()
}

class SocketThread {
- insocked : Socked
- makeRequest(tokens : String[]) : Request
- makeRequestReader(tokens : String[]) : RequestReader
- makeRequestArea(tokens : String[]) : RequestArea
- makeHeaderAnswer() : String
- makeJsonAnswer(request : Request) : String
+ run()
}

Webserver +-right- SocketThread

note right of SocketThread
inner class
of Webserver
end note

class DirectoryDoors {
- INSTANCE : DirectoryDoors
- allDoors : Door[]
- DirectoryDoors()
+ {static} makeDoors()
+ {static} findDoorById(id : String) : Door
+ {static} getAllDoors() : Door[]
}

DirectoryDoors --> "*" Door : "allDoors"
Partition --> "*" Area : "areas"

class DirectoryUsers {
- INSTANCE : DirectoryUsers
- users : User[]
+ {static} makeUsers()
+ {static} findUserByCredential(credential : String) : User
}

DirectoryUsers --> "*" User : "users"

class DirectoryAreas {
- INSTANCE : DirectoryAreas
- allAreas : Area[]
- DirectoryAreas()
- rootArea : Area
+ {static} makeAreas()
- addDoorIfFound(list : Door[], id : String)
+ findAreaById(id : String) : Area
}

DirectoryAreas --> "*" Area : "allAreas"


class Door {
- id : String
- from : String
- to : String
- partition : String
- closed : boolean
- state : DoorState
+ Door(id : String, from : String, to : String, partition : String)
+ processRequest(request : RequestReader)
+ setState(doorState : DoorState)
+ open()
+ close()
+ toJson() : JSONObject
+ getId() : String
+ getFrom() : String
+ getTo() : String
+ getPartition() : String
'+ toString() : String
'+ isClosed() :boolean
'+ setClosed(b : boolean)
'+ getStateName() : String
- doAction(action : String)
}

abstract class DoorState {
# stateName : String
+ {abstract} open()
+ {abstract} close()
+ {abstract} lock()
+ {abstract} unlock()
}

Door --> "1" DoorState : state

class Unlock extends DoorState {
+ open()
+ close()
+ lock()
+ unlock()
}

class Lock extends DoorState {
+ open()
+ close()
+ lock()
+ unlock()
}

class User {
- name : String
- credential : String
- role : String
+ getName() : String
+ getCredential() : String
+ getRole() : String
+ User(name: String, credential: String)
+ toString() : String
}

class Space extends Area{
+ Space(id : String, doors : Door[])
+ getDoorsGivingAccess() : Door[]
+ accept(visitor : AreaVisitor)
+ toJson(depth : int) : JSONObject
+ isLocked() : boolean
+ isUnlocked() : boolean
}

class Partition extends Area {
- areas : Area[]
+ Partition(id : String, doors : Door[])
+ getDoorsGivingAccess() : Door[]
+ accept(visitor : AreaVisitor)
+ toJson(depth : int) : JSONObject
+ isLocked() : boolean
+ isUnlocked() : boolean
}

abstract class Area {
# id : String
# doors : Door[]
+ Area(id : String, doors : Door[])
+ getId() : String
+ setDoors(doors : Door[])
+ {abstract} getDoorsGivingAccess() : Door[]
+ {abstract} accept(visitor : AreaVisitor)
+ {abstract} toJson(depth : int) : JSONObject
+ {abstract} isLocked() : boolean
+ {abstract} isUnlocked() : boolean
}

interface AreaVisitor {
+ visitSpace(space : Space);
+ visitPartition(partition : Partition);
}

class FindAreaVisitor implements AreaVisitor {
- targetId : String
- result : Area
+ FindAreaVisitor()
+ visitSpace(space : Space);
+ visitPartition(partition : Partition);
+ getResult() : Area
}

FindAreaVisitor --> "*" Area : result


class Main {
+ {static} main(args : String)
}

note right of Main::main
DirectoryDoors.makeDoors()
DirectoryUsers.makeUsers()
DirectoryAreas.makeAreas()
new Webserver()
end note

Main -[hidden]down- Webserver
Webserver -[hidden]down- DirectoryDoors
DirectoryDoors -[hidden]right- DirectoryUsers
@enduml
